--- a/Code/Pricing.ipynb
+++ b/Code/Pricing.ipynb
@@ -400,6 +400,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Index(['contractSymbol', 'lastTradeDate', 'strike', 'lastPrice', 'bid', 'ask',\n",
+      "       'change', 'percentChange', 'volume', 'openInterest',\n",
+      "       'impliedVolatility', 'inTheMoney', 'contractSize', 'currency'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import yfinance as yfin\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import pandas_datareader.data as pdr\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from datetime import date\n",
+    "\n",
+    "\n",
+    "yfin.pdr_override()\n",
+    "\n",
+    "def format_date(x):\n",
+    "    return x.strftime('%Y-%m-%d')\n",
+    "\n",
+    "\n",
+    "# List of stock symbols\n",
+    "ticker = 'META'\n",
+    "\n",
+    "# Set the date range for the historical data\n",
+    "start_date = '2023-01-01'\n",
+    "end_date = date.today()\n",
+    "\n",
+    "\n",
+    "# Download historical stock data for each stock\n",
+    "\n",
+    "stock_data = pdr.get_data_yahoo(ticker, start_date, end_date)\n",
+    "\n",
+    "\n",
+    "\n",
+    "expiration = '2023-10-20'\n",
+    "stock_ticker = yfin.Ticker(ticker)\n",
+    "# Fetch options data\n",
+    "options_data = stock_ticker.option_chain(expiration)\n",
+    "print(options_data.calls.columns)\n",
+    "# options_data.calls.plot(x='strike',y='lastPrice')\n",
+    "calls = options_data.calls\n",
+    "puts = options_data.puts\n",
+    "\n",
+    "calls['lastTradeDate'] = calls['lastTradeDate'].apply(format_date)\n",
+    "puts['lastTradeDate'] = puts['lastTradeDate'].apply(format_date)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2023-10-10    294.307752\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Option_pricing import Pricing_Models\n",
+    "from datetime import datetime\n",
+    "\n",
+    "t_ini='2023-10-10'\n",
+    "\n",
+    "\n",
+    "# Parse the date strings into datetime objects\n",
+    "t0 = datetime.strptime(t_ini, '%Y-%m-%d')\n",
+    "t = datetime.strptime(t_ini, '%Y-%m-%d')\n",
+    "T = datetime.strptime(expiration, '%Y-%m-%d')\n",
+    "\n",
+    "Expiry = (T - t0).days/252\n",
+    "t_now = (t-t0).days/252\n",
+    "\n",
+    "price = stock_data.loc[stock_data.index==t0, 'Close']\n",
+    "strike_price = round(price.values[0]/5)*5\n",
+    "risk_free_rate = 0.05\n",
+    "deltat = 1/252.0\n",
+    "volatility = calls.loc[calls.lastTradeDate==t_ini,'impliedVolatility'].values[0]\n",
+    "model = Pricing_Models(strike_price,risk_free_rate,Expiry,volatility,deltat)\n",
+    "\n",
+    "model.Black_Scholes(price,t_now,\"call\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "295.25"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calls.loc[calls.lastTradeDate==t_ini,'lastPrice'].values[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -423,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
